<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:stretchColumns="2"
    >

    <TableRow
        android:layout_width="fill_parent">
        <Button
            android:id="@+id/btnColor1"
            android:text="@string/Color1"
            android:textColor="@color/colorRed"/>
        <Button
            android:id="@+id/btnColor2"
            android:text="@string/Color2"
            android:textColor="@color/colorYellow"/>

        <Button
            android:id="@+id/btnColor3"
            android:text="@string/Color3"
            android:textColor="@color/colorBlue"/>

    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/tvText"
            android:background="@color/colorYellow"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_span="3"/>
    </TableRow>

    <TableRow
        android:gravity="right">
        <Button
            android:id="@+id/btnClear"
            android:text="@string/Clear"
            android:layout_column="2"/>
    </TableRow>
</TableLayout>