<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="150dp"
        android:layout_marginStart="25dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:text="@string/Button1"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btn1"
        android:layout_marginEnd="25dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:text="@string/Button2"/>





    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="75dp"
        android:layout_marginStart="75dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="75dp"
        android:text="@string/Button3"/>
    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btn3"
        android:layout_marginEnd="75dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="75dp"
        android:text="@string/Button4"/>

    <Button
        android:id="@+id/btn5"
        android:text="@string/Button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
    </Button>





</RelativeLayout>