<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/colorBlack">
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin10"
        android:gravity="center"
       >
        <RadioButton
            android:id="@+id/rbtnRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Red"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:checked="true"
            android:buttonTint="@color/colorWhite"
            />
        <RadioButton
            android:id="@+id/rbtnGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Green"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:buttonTint="@color/colorWhite"/>
        <RadioButton
            android:id="@+id/rbtnBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Blue"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:buttonTint="@color/colorWhite"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_margin="@dimen/margin10">
        <Button
            android:id="@+id/btnSetcolor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SetColor"
            android:layout_marginRight="@dimen/margin10"/>
        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Clear"
            android:layout_marginRight="@dimen/margin10"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tvText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin10"
        android:gravity="bottom"
        android:background="@color/colorWhite"/>


</LinearLayout>